# ifj23-compiler

./: .gitignore  CMakeList.txt  CMakeList.txt.in  CMakeLists.txt  Makefile  README.md  bugreport  code.ifj23  compiler-debug  example.ifj23  genreal.c  output.txt  realexpr.c  realgenerator.c  realgenerator.h  realparser.c  test.c  test.ifj23
docs/: grammar-clean  grammar-clean.txt  grammar.txt  prec-grammar.txt  prec_grammar.txt
examples/: code.ifj23  example.ifj23  expr.ifj23
src/: CMakeLists.txt  Makefile  ast.c  ast.h  compiler  compiler.c  dbg.c  dbg.h  error.h  expr.c  expr.h  generator.c  generator.h  log.h  parser.c  parser.h  parserhelpers.c  parserhelpers.h  precstack.c  precstack.h  scanner.c  scanner.h  stack.c  stack.h  str.c  str.h  symbstack.c  symbstack.h  symstack.c  symstack.h  symtable.c  symtable.h  utils.h
src/ds/: CMakeLists.txt  str.h
src/scanner/: CMakeLists.txt  scanner.c  scanner.h
src/test/: output.txt
src/to-implement/: dbg.c
tests/: CMakeLists.txt
to-implement/: dbg.h
